--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,13 @@
 <!-- End Jekyll SEO tag -->
 
     <link rel="stylesheet" href="/mariajuana/assets/css/style.css?v=d5b4d080aad52ca11387e16b15d3d3c2d24e4442">
+
+<style>
+body {
+  background-image: url('item.png');
+}
+</style>
+
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
