--- a/index.htm
+++ b/index.htm
@@ -21,10 +21,32 @@
 
 <style>
 body {
-  background-image: url('item.png');
+  background-color: green;
+  color: white;
+  links: white;
 }
-</style>
+a:link {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: red;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
 
+</style>
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
@@ -36,13 +58,15 @@ body {
     <p>Official WebSite on MariaJuana.io<br />
       Please visit <a href="https://www.mariajuana.io">https://www.mariajuana.io</a> for apps and games</p>
   </li>
+  <br>
   <li>
-    <p>Coquí BudTender™ Game<br />
-Please visit <a href="https://www.mariajuana.io/coquibudtender">https://www.mariajuana.io/coquibudtender</a> or email coquibudtender@mariajuana.io to buy the first Puerto Rican 2D cannabis video game. (3D version coming soon...)</p>
+    <p>Coquí BudTender™ Game <a href="./coquibudtender"><img src="./coquibudtender.png" height="64"></a><br />
+Please visit <a href="./coquibudtender">https://www.mariajuana.io/coquibudtender</a> or email coquibudtender@mariajuana.io to buy the first Puerto Rican 2D cannabis video game. <br>3D version coming soon...</p>
   </li>
+  <br>
   <li>
-    <p>CaTeFla™ App<br />
-      Please visit <a href="https://www.mariajuana.io/catefla">https://www.mariajuana.io/catefla</a> or email catefla@mariajuana.io to get a FREE download of this cannabis app.</p>
+    <p>CaTeFla™ App <a href="./catefla"><img src="./catefla.png" height="64"></a><br />
+      Please visit <a href="./catefla">https://www.mariajuana.io/catefla</a> or email catefla@mariajuana.io to get a FREE download of this cannabis app.</p>
   </li>
 </ul>
 
