--- a/catefla/index.htm
+++ b/catefla/index.htm
@@ -55,7 +55,7 @@ a:active {
       <h1 id="mariajuana">CaTeFla™ App</h1>
 <ul>
   <li>
-    <p>CaTeFla™ App <a href="./catefla.apk"><img src=".././catefla.png" height="64"></a><br />
+    <p>CaTeFla™ App <a href="./catefla.apk"><img src=".././catefla.png" height="64"></a><br /><br />
       Please <a href="./catefla.apk"><img src=".././download.png" width="150"></a> CaTeFla™ App for Android™.</p>
   </li>
 </ul>
