--- a/coquibudtender/index.htm
+++ b/coquibudtender/index.htm
@@ -60,7 +60,7 @@ a:active {
   transition: 0.3s;
 }
 
-#myImg:hover {opacity: 0.7;}
+#myImg2:hover {opacity: 0.7;}
 
 
 /* The Modal (background) */
